<resources>
    <string name="app_name">Contacts App</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="location">Location</string>
    <string name="postcode">Post Code</string>
    <string name="add">Add Contact</string>
    <string name="beginingText">Hello welcome to TAXAS application for peoples contacts,if you want to remember your details like name phonenumber location add it ,also if you are searching for other people contacts you can just view them and search for who you want</string>
</resources>